--- a/_posts/2018-01-10-2k17.markdown
+++ b/_posts/2018-01-10-2k17.markdown
@@ -1,76 +1,59 @@
 ---
 layout: post
-title: 2017 в фотографиях
+title: Фотокарточки из 2017
 date: '2018-01-10 19:35:22'
 tags:
-- photoblog
-- russia
-- travel
-- europe
-- asia
-image: /assets/images/2018/01/HK1.jpg
+- photo
+- notes
+- yearly
+image: /assets/images/2018/01/DSCF8769.jpg
 ---
 
-50 самых важных фотографий прошедшего года.
-
 Когда-то я [умел фотографировать](https://shouldgo.ru/tag/photoblog/). Не снимал шедевры, конечно, и в числах Фибоначчи не разбирался. Просто рассматривал работы Корнблю, Брессона, Эрвитта, часами практиковался и пытался цитировать. Получалось сносно.
+
+![DSCF8769](/assets/images/2018/01/DSCF8769.jpg)
 
 Затем я женился, стал офисным и продал 5D mark II, чтобы расплатиться с долгами. Когда уезжал в Тай, решил купить новый аппарат, потому что с камерой айфона не подружился. Лёгкий, красивый и с ручным управлением.
 
 Взял Фуджик X-T10 с китом 18-55 f/2.8-4, потому что на X-T1 с фиксами не хватало денег. Полгода жалел, что не Сони: привыкал к эргономике, учился тянуть X-Trans’овские РАВы в Лайтруме. Получалось скверно.
 
-В 2018&nbsp;хочу уделить фотографии больше времени. Читать, ходить на выставки и практиковаться. Самая важная часть практики — получать по щам от злобных комментаторов в интернете. То есть от вас, мои любимые пидоры.
+В 2018 хочу уделить фотографии больше времени. Читать, ходить на выставки и практиковаться. Самая важная часть практики — получать по щам от злобных комментаторов в интернете. То есть от вас, мои любимые пидоры.
 
 ## Азия
 
 Год начался в Гонконге — лучшем городе для стрит-фотографа. Я стеснялся и не освоился со всеми крутилками, поэтому получались&nbsp;в основном&nbsp;ситискейпы.
 
 ![HK1](/assets/images/2018/01/HK1.jpg)
-
 ![HK2](/assets/images/2018/01/HK2.jpg)
-
 ![HK3](/assets/images/2018/01/HK3.jpg)
 
 После был Сингапур, примерно с тем же результатом. О важных событиях и путешествиях я хочу написать отдельно, а этот пост — про важные фотографии.
 
 ![SNG1](/assets/images/2018/01/SNG1.jpg)
-
 ![SNG2](/assets/images/2018/01/SNG2.jpg)
-
 ![SNG3](/assets/images/2018/01/SNG3.jpg)
 
 Большая часть первого квартала прошла в Таиланде, который я так и не полюбил. Большая часть фото из Таиланда — фото закатов и рассветов, которые я полюбил в полной мере, потому что они были единственным развлечением.
 
 ![DSCF24401](/assets/images/2018/01/DSCF24401.jpg)
-
 ![TH3](/assets/images/2018/01/TH3.jpg)
-
 ![TH4](/assets/images/2018/01/TH4.jpg)
-
 ![TH5](/assets/images/2018/01/TH5.jpg)
-
 ![TH7](/assets/images/2018/01/TH7.jpg)
 
 Несмотря на жару и тоску, маленький район-пляж Раваи на южной оконечности Пхукета стал вторым домом, чем пока не может похвастаться Москва.
 
 ![DSCF2643](/assets/images/2018/01/DSCF2643.jpg)
-
 ![RW1](/assets/images/2018/01/RW1.jpg)
-
 ![RW2](/assets/images/2018/01/RW2.jpg)
-
 ![RW3](/assets/images/2018/01/RW3.jpg)
-
 ![RW5](/assets/images/2018/01/RW5.jpg)
 
 В Тае было много замечательных моментов и людей, по которым я скучаю. Для всего этого нет специальных фотографий — есть просто памятные.
 
 ![RNDM1](/assets/images/2018/01/RNDM1.jpg)
-
 ![RNDM2](/assets/images/2018/01/RNDM2.jpg)
-
 ![TH1](/assets/images/2018/01/TH1.jpg)
-
 ![TH2](/assets/images/2018/01/TH2.jpg)
 
 В марте ушёл из Авиасейлс, потому что надоели Тай и работа. Но было грустно.
@@ -82,7 +65,6 @@ image: /assets/images/2018/01/HK1.jpg
 Из Азии вернулся в родной город и разочаровался. Что было привычно несовершенным, стало невыносимо хуёвым. После трипов в Европу я этого не замечал, а прожив год в грязном деревенском Тае, был неприятно удивлён.
 
 ![DSCF3887](/assets/images/2018/01/DSCF3887.jpg)
-
 ![DSCF8146](/assets/images/2018/01/DSCF8146.jpg)
 
 Люди остались хорошими. С удовольствием приеду повидать друзей в марте.
@@ -92,21 +74,15 @@ image: /assets/images/2018/01/HK1.jpg
 В мае переехал в Москву, потому что там ждал [бизнес](https://outmarketing.ru). Летом в пределах Садового Москва — отличный город, но всё время спешит и загоняет в рамки.
 
 ![DSCF3677](/assets/images/2018/01/DSCF3677.jpg)
-
 ![DSCF3768](/assets/images/2018/01/DSCF3768.jpg)
-
 ![DSCF4151](/assets/images/2018/01/DSCF4151.jpg)
-
 ![DSCF5512](/assets/images/2018/01/DSCF5512.jpg)
-
 ![DSCF5724](/assets/images/2018/01/DSCF5724.jpg)
 
 Ранней осенью красиво, а с октября начинается невыносимая хуйня с закатами в три, смогом и вечными сумерками. Хотел повеситься, но нужно было работать.
 
 ![DSCF6703](/assets/images/2018/01/DSCF6703.jpg)
-
 ![DSCF7635](/assets/images/2018/01/DSCF7635.jpg)
-
 ![DSCF7907](/assets/images/2018/01/DSCF7907.jpg)
 
 ## Питер
@@ -114,15 +90,10 @@ image: /assets/images/2018/01/HK1.jpg
 За лето дважды побывал в Питере, и с первого взгляда невзлюбил эту напыщенную гнилую яму. Жаль. Там много друзей, которых хочется видеть чаще.
 
 ![DSCF3387](/assets/images/2018/01/DSCF3387.jpg)
-
 ![DSCF4181](/assets/images/2018/01/DSCF4181.jpg)
-
 ![DSCF4376](/assets/images/2018/01/DSCF4376.jpg)
-
 ![DSCF4415](/assets/images/2018/01/DSCF4415.jpg)
-
 ![DSCF4420](/assets/images/2018/01/DSCF4420.jpg)
-
 ![DSCF4477](/assets/images/2018/01/DSCF4477.jpg)
 
 ## Стокгольм
@@ -130,13 +101,9 @@ image: /assets/images/2018/01/HK1.jpg
 В Стокгольме уважают лаконичных.
 
 ![DSCF7039](/assets/images/2018/01/DSCF7039.jpg)
-
 ![DSCF7233](/assets/images/2018/01/DSCF7233.jpg)
-
 ![DSCF7254](/assets/images/2018/01/DSCF7254.jpg)
-
 ![DSCF7264](/assets/images/2018/01/DSCF7264.jpg)
-
 ![DSCF7486](/assets/images/2018/01/DSCF7486.jpg)
 
 ## Кипр
@@ -144,23 +111,16 @@ image: /assets/images/2018/01/HK1.jpg
 От ёбатой московской срани пришлось уехать на острова. Зимовать остались на Кипре, который оказался приятнейшим местом. Рисёрчу варианты ВНЖ.
 
 ![DSCF8635](/assets/images/2018/01/DSCF8635.jpg)
-
 ![DSCF8725](/assets/images/2018/01/DSCF8725.jpg)
-
-![DSCF8769](/assets/images/2018/01/DSCF8769.jpg)
 
 ## Рандомные фотки
 
 Я доволен тем, как завершился год. Фотографировать стал неизмеримо хуже, но&nbsp;по меньшей мере&nbsp;регулярно. Пытаюсь думать, смотрю по сторонам, упражняюсь в обработке. Лайтрум к концу года научился нормально работать с РАВами от Фуджи. Сильно не хватает смелости, чтобы ебашить дикий стрит. Купил лёгкую треногу и Гелиос 44-3 увеселения ради. Фуджи полюбил, очень хочу X-Pro2.
 
 ![DSCF4496](/assets/images/2018/01/DSCF4496.jpg)
-
 ![DSCF6482](/assets/images/2018/01/DSCF6482.jpg)
-
 ![DSCF6772](/assets/images/2018/01/DSCF6772.jpg)
-
 ![DSCF7808](/assets/images/2018/01/DSCF7808.jpg)
-
 ![DSCF8311](/assets/images/2018/01/DSCF8311.jpg)
 
 ## Что дальше
@@ -172,4 +132,3 @@ image: /assets/images/2018/01/HK1.jpg
 ![THPORT](/assets/images/2018/01/THPORT.jpg)
 
 Увидимся.
-
