--- a/_posts/2020-04-26-italia.markdown
+++ b/_posts/2020-04-26-italia.markdown
@@ -1,14 +1,16 @@
 ---
 layout: post
 title: Доковидные приключения в Италии
-featured: true
 date: '2020-04-26 19:07:30'
 tags:
-- europe
 - travel
+- europe
+- italy
 image: /assets/images/2020/04/IMG_6879-1.jpg
 ---
 В 2013 году я проехал шесть итальянских городов: Рим, Флоренцию, Геную, Болонью, Верону и Венецию. Хотел продолжить тур этим летом, но теперь вместе со всей планетой сижу дома, смотрю старые фотки и вспоминаю истории.
+
+![](/assets/images/2020/04/IMG_6879-1.jpg)
 
 Присоединяйтесь. Слов будет мало, потому что и без них грустно.
 
@@ -131,7 +133,7 @@ image: /assets/images/2020/04/IMG_6879-1.jpg
 
 За несколько дней в этом сыром промозглом тупике цивилизации, я испытал всё — от полного разочарования до гротескного восторга и экстатической радости. Сперва хотел побыстрее уехать, затем — остаться как можно дольше, теперь — поскорее вернуться.
 
-![](/assets/images/2020/04/IMG_6879-1.jpg)
+![](/assets/images/2020/04/IMG_6890-1.jpg)
 
 Весь город — лабиринт ржавых стен, которые непременно кончаются жидким агрегатным состоянием. Здесь невозможно ориентироваться даже по карте. Здесь ты всегда в тени и ждёшь момента, когда на ближайшей кампе тебя наконец скупым лучом местного солнца.
 
@@ -153,7 +155,6 @@ image: /assets/images/2020/04/IMG_6879-1.jpg
 Венеция познакомила меня с Иосифом Александровичем Бродским. А он, как частый посетитель и почитатель местной эстетики, познакомил меня с той Венецией, которая навсегда влилась в память самым поэтичным местом на планете.
 
 ![](/assets/images/2020/04/IMG_6687-1.jpg)
-![](/assets/images/2020/04/IMG_6890-1.jpg)
 
 Сам Иосиф Александрович лежит неподалёку — на острове-кладбище [Сан-Микеле](https://goo.gl/maps/Vn7TUCW6v1o9UyX37), которое нельзя не посетить. Кроме Сан-Микеле можно заплыть на остров [Мурано](https://goo.gl/maps/GNNuLuB5o5To2VDz9), известный смешными штуками из стекла. И обязательно — на красочный [Бурано](https://goo.gl/maps/joqhWXEy1CsAkYJy6) за невероятной красотой.
 
