--- a/_posts/2020-05-12-germania-75.markdown
+++ b/_posts/2020-05-12-germania-75.markdown
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: Германия в 75 кадрах
-featured: true
+title: Германия в 75 кадрах
 date: '2020-05-12 10:40:21'
 tags:
-- europe
 - travel
+- europe
+- germany
 image: /assets/images/2020/05/DSCF2908.jpg
 ---
 
 Вторая Мировая закончилась 75 лет назад. Эту страшную историю нельзя забывать. А ещё нельзя на ней зацикливаться. Сегодня я покажу 75 фото и расскажу несколько истории из своих поездок по «проигравшей стране».
+
+![](/assets/images/2020/05/DSCF2908.jpg)
 
 Внутри — Берлин, Мюнхен, Франкфурт, Нюрнберг, Дрезден, сказочный замок Нойшванштайн и один из самых страшных концлагерей в Дахау.
 
@@ -128,12 +130,11 @@ image: /assets/images/2020/05/DSCF2908.jpg
 ## Фюссен, Швангау, Нойшванштайн
 Противоположный опыт — визит в «диснеевский» замок <a href="https://ru.wikipedia.org/wiki/Нойшванштайн?ref=shouldgo.me">Нойшванштайн</a>. Он находится у подножия Альпов в коммуне <a href="https://goo.gl/maps/epowFzxGV8FgQTot7?ref=shouldgo.me">Швангау</a> неподалёку от живописного городка Фюссен. До него можно добраться за пару часов прямым поездом с <a href="https://goo.gl/maps/i3z2QYFtiHyM3gWR7?ref=shouldgo.me">мюнхенского хауптбанхофа</a>.
 
-![](/assets/images/2020/05/DSCF2908.jpg)
+![](/assets/images/2020/05/IMG_7415.jpg)
 
 Сам замок Нойшванштайн — фантазия инфантильного короля Людвига II. Истории за замком мало — он построен по капризу монаршей особы в конце XIX века на месте руин двух крепостей. Выдержан в средневековом стиле, пропущенном через призму романтизма.
 
 ![](/assets/images/2020/05/DSCF2942.jpg)
-![](/assets/images/2020/05/IMG_7415.jpg)
 
 Король провёл в замке всего 172 дня, после чего скоропостижно преставился. Проект был настолько амбициозным, что стройка вылезла из всех бюджетов и дедлайнов, ввергла коммуну в долги и не была полностью завершена по первоначальному макету.
 
