--- a/_posts/2021-01-12-2k20.markdown
+++ b/_posts/2021-01-12-2k20.markdown
@@ -3,12 +3,15 @@ layout: post
 title: Полсотни снимков из локдауна
 date: '2021-01-12 20:37:48'
 tags:
-- yearly
 - photo
-image: /assets/images/2021/01/DSCF4187.jpg
+- notes
+- yearly
+image: /assets/images/2021/01/DSCF3798.jpg
 ---
 
 Год, безусловно, был совершенно всратым, но воспоминаний накопилась куча. Вывалю их прямо здесь, чтобы спустя лета порыться в несвежем содержимом, утирая ностальгическую слезу с поседевших усов.
+
+![](/assets/images/2021/01/DSCF3798.jpg)
 
 Лично мне жаловаться не приходится: изоляция прошла в Европе, между волнами заразы были короткие вылазки в соседние страны, годы цифрового номадства отлично подготовили к социальной аскезе и удалёнке, а все дорогие люди без потерь доползли до тазика с новогодним оливье. Короче, всё было сасно, но для порядка придётся немного поныть.
 
@@ -78,7 +81,6 @@ image: /assets/images/2021/01/DSCF4187.jpg
 ![](/assets/images/2021/01/DSCF3634.jpg)
 ![](/assets/images/2021/01/DSCF3521.jpg)
 ![](/assets/images/2021/01/DSCF3495.jpg)
-![](/assets/images/2021/01/DSCF3798.jpg)
 
 Весна в Кракове была изумительной — весь апрель цвели вишня, сакура и крокусы. Лето было долгим и жарким. Золотая осень плавно текла с октября по ноябрь. Но в декабре наступила мрачная срань с туманами, дождями и непроницаемым серым смогом. Снег так и не выпал, а мы впервые начали грустить, что город такой тихий и тесный.
 
