--- a/_posts/2013-09-05-adalar.markdown
+++ b/_posts/2013-09-05-adalar.markdown
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: Водные процедуры — тур по Босфору, путешествие на Принцевы острова
+title: Стамбул — тур по Босфору и Принцевы острова
 date: '2013-09-05 01:49:30'
 tags:
 - travel
+- europe
 - asia
+- turkiye
 image: /assets/images/2017/08/IMG_4351.jpg
 ---
 
@@ -29,7 +31,6 @@ image: /assets/images/2017/08/IMG_4351.jpg
 Что действительно приводит в восторг, так это потрясающего цвета вода. [Мраморное море](http://ru.wikipedia.org/wiki/%D0%9C%D1%80%D0%B0%D0%BC%D0%BE%D1%80%D0%BD%D0%BE%D0%B5_%D0%BC%D0%BE%D1%80%D0%B5) не напрасно кличут Мраморным (да, мрамор бывает бирюзовым, если это не мрамор из отечетсвенного метро).
 
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4082.jpg)
-
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4282.jpg)
 
 В общем, ничего сверхъестественного, но сплавать стоит. Посмотрите с воды на [Румелихисар](http://shouldgo.ru/2013/08/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула") и [Анадолухисар](http://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B0%D0%B4%D0%BE%D0%BB%D1%83%D1%85%D0%B8%D1%81%D0%B0%D1%80), отдохнете от сухопутнокрысости и насладитесь живительной прохладой.
@@ -43,7 +44,6 @@ image: /assets/images/2017/08/IMG_4351.jpg
 Никаких лайфхаков, всё просто. 40 лир (20 баксов) с вас сдерут хитрые организаторы туристических маршрутов. 5 лир стоит обычный общественный паром, плавательные свойства которого ничем не отличаются от свойств туристического. Не могу судить, насколько комфортабельным является турбот, но плавать на паблик-пароме мне понравилось. Внутри просторно и тоже наливают, на верхних палубах можно насладиться чудесным ПРОНИЗЫВАЮЩИМ МОРСКИМ ВЕТРОМ СДИРАЮЩИМ ЕБАЛО. Паромы отплывают с пристани [Кабаташ](http://wikimapia.org/1097840/ru/%D0%9F%D1%80%D0%B8%D1%81%D1%82%D0%B0%D0%BD%D1%8C-%D0%9A%D0%B0%D0%B1%D0%B0%D1%82%D0%B0%D1%88-%D0%BE%D0%B4%D0%B8%D0%BD-%D0%B8%D0%B7-%D1%82%D0%B5%D1%80%D0%BC%D0%B8%D0%BD%D0%B0%D0%BB%D0%BE%D0%B2), до которой можно добраться на трамвае или фуникулере с площади Таксим. Паром можно оплатить при помощи [истанбулкарт](http://en.wikipedia.org/wiki/Istanbulkart).
 
 ![Паром на Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4291.jpg)
-
 ![Паром на Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4299.jpg)
 
 В дороге можно расслабиться и почитать, если вам не помешают многочисленные вопящие дети. Единственный выход — сесть у окна и ждать пока по босфору проплывут их маленькие трупики созерцать водную гладь, редкие интересности и проплывающие мимо баркасы.
@@ -53,7 +53,6 @@ image: /assets/images/2017/08/IMG_4351.jpg
 Береговая линия Кадыкоя довольно скучна и однообразна, КАК ВАША ЖИСЬ. Интерес за всё время плавания вызвала разве что [Девичья Башня](http://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%B2%D0%B8%D1%87%D1%8C%D1%8F_%D0%B1%D0%B0%D1%88%D0%BD%D1%8F_(%D0%A1%D1%82%D0%B0%D0%BC%D0%B1%D1%83%D0%BB)) (Кыз Кулеси), расположенная на маленьком островке посреди пролива. Сначала она была фортом, маяком, затем хосписом для больных холерой, а потом и вовсе последним пристанищем для приговоренных к смерти. Сейчас там расположены ресторан, культурный центр и смотровая площадка. Неподалеку есть действующий маяк, соединенный с сушей тонкой насыпью.
 
 ![Девичья Башня, Стамбул 2013](/assets/images/2017/08/IMG_4256.jpg)
-
 ![Маяк на Босфоре, Стамбул 2013](/assets/images/2017/08/IMG_4276.jpg)
 
 Всего в архипелаге [Адалар](http://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%B8%D0%BD%D1%86%D0%B5%D0%B2%D1%8B_%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B2%D0%B0) девять островов разного размера и крутости. Паром пристает к четырем из них, но мы изначально взяли курс на самый дальний и самый большой — остров [Бюйюкада](https://www.google.ru/maps/preview#!q=Buyukada+Iskelesi+B%C3%BCy%C3%BCkada+%C4%B0skelesi&data=!1m4!1m3!1d31995!2d29.0929581!3d40.8682681!4m28!2m15!1m13!1s0x0%3A0x59943ea01b465308!3m8!1m3!1d31995!2d29.0929581!3d40.8682681!3m2!1i1920!2i1018!4f13.1!4m2!3d40.8737401!4d29.1273308!6zQsO8ecO8a2FkYSwgQWRhbGFyLCBUdXJrZXk!5m11!1m10!1zQsO8ecO8a2FkYSwgQWRhbGFyLCBUdXJrZXk!4m8!1m3!1d185265!2d60.6549335!3d56.813891!3m2!1i1920!2i1018!4f13.1). Виляя между Принцевыми островами, вы наверняка отметите, что архитектура местных построек не имеет ничего общего со сферическим Стамбулом в вакууме, а из бухты Бюйюкады открывается отличная панорама, которая еще раз дает осознать, насколько неебически огромнен этот город.
@@ -63,25 +62,21 @@ image: /assets/images/2017/08/IMG_4351.jpg
 Как я уже успел отметить, Принцевы острова ни разу не похожи на среднестатистический Стамбул. Здесь очень тихо, спокойно и невероятно красиво. Местная эстетика не вызывает ВАУ ПИЗДЕЦ эффектов и не впечатляет вычурностью и изяществом форм. Это совершенно иная красота, проистекающая из ощущения полной гармонии и комфорта. Милейшая колониальная архитектура с покосившимися домиками и облетающей побелкой просто сносит башню. Если бы я был турецким миллионером, поехал бы сюда умирать. В том числе и от скуки.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4325.jpg)
-
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4332.jpg)
 
 Топография острова Бюйюкада порадует ваши хилые ноги изобилием спусков и подъемов. Упоретесь, не взирая на то, что остров очень маленький. Машин здесь единицы, основной транспорт — пышные гужевые повозки, велосипеды и гольф-кары. Но лучше просто ходить и получать спонтанные оргазмы. Мы таким образом случайно забрели в закрытый клуб на воздухе, от куда нас попросили тотчас удалиться за неимением членского абонемента.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4328.jpg)
-
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4335.jpg)
 
 Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](http://shouldgo.ru/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39b7.jpg)
-
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39c7.jpg)
 
 Попить и покушать дают в основном в районе пристани. Обходится такое удовольствие не дороже, чем в самом Стамбуле, а потрясающие виды на Босфор, берега Стамбула и проплывающие мимо величественные суда делают ОТВАЛ БАШКИ. Люди здесь живут состоятельные, есть несколько платных пляжей, речное такси за дикие деньги, огромные виллы с бассейнами и мансардами и вообще всё, ЧЕГО У ВАС НИКОГДА НЕ БУДЕТ.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4353.jpg)
-
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4340.jpg)
 
 Богатые и высокопоставленные люди жили здесь испокон веков. В основном, благодаря тому, что древняя Византия, а позже и Османская империя выпездывали сюда ссыльных принцев и прочих провинившихся королевских особ (какое горе быть сосланным на райский остров). Должен признаться, что я никогда бы не узнал про Адалар, если бы не песня группы [СБПЧ](http://ru.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BC%D0%BE%D0%B5_%D0%B1%D0%BE%D0%BB%D1%8C%D1%88%D0%BE%D0%B5_%D0%BF%D1%80%D0%BE%D1%81%D1%82%D0%BE%D0%B5_%D1%87%D0%B8%D1%81%D0%BB%D0%BE_(%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0)):
@@ -111,10 +106,7 @@ image: /assets/images/2017/08/IMG_4351.jpg
 
 ![Мы и Босфор, Стамбул](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39ec.jpg)
 
-**Бонус трек:** почти в каждом туалете Стамбула есть биде. Внимание, вопрос: как этот факт связан с мусульманской культурой и религией? Берегите себя! Здоровайтесь через перчатку!
-
-**Не забудьте почитать полный цикл наших веселых приключений. Стамбул на все 60% только у меня в блоге:**
-
+## Полный цикл моих веселых приключений в Стамбуле:
 - [Стамбул — турецкое гостеприимство](http://shouldgo.ru/istanbul-welcome/ "Стамбул — турецкое гостеприимство")
 - [Стамбул — южный берег Европейской части](http://shouldgo.ru/istanbul-south-european/ "Стамбул — южный берег Европейской части")
 - [Таксим-Гези, Галатская башня — Стамбул с северной стороны](http://shouldgo.ru/istanbul-taksim-galata/ "Таксим-Гези, Галатская башня — Стамбул с северной стороны")
