--- a/_posts/2016-09-04-thai-life.markdown
+++ b/_posts/2016-09-04-thai-life.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Первый месяц в Тае
+title: Первый месяц в Таиланде
 date: '2016-09-04 20:09:00'
 tags:
 - travel
@@ -8,7 +8,7 @@ tags:
 image: /assets/images/2017/08/DSCF0497.jpg
 ---
 
-Теперь я официальный эксперт по Таиланду. Могу делать любые заявления, вы всё равно не проверите. Начну с предрассудков, которые привёз с собой:
+Теперь я официальный эксперт по Таиланду. Могу делать любые заявления — вы всё равно не проверите. Начну с предрассудков, которые привёз с собой:
 
 ## Пхукет — ебаная деревня
 
@@ -68,4 +68,3 @@ image: /assets/images/2017/08/DSCF0497.jpg
 - Видел твою мамку на Бангле в ням-ням баре.
 
 Карочи, я пока привыкаю к климату, команде и задачам. Очень хочу сделать что-нибудь крутое и много раз. Спасибо, что помогали и мешали. Люблю вас ещё сильнее. Приезжайте в гости!
-
