--- a/_posts/2018-10-23-kipr-1.markdown
+++ b/_posts/2018-10-23-kipr-1.markdown
@@ -1,16 +1,17 @@
 ---
 layout: post
-title: Дважды Кипр — зимовка и путешествие по южной части
-featured: true
+title: Кипр — зимовка и исчерпывающий гайд
 date: '2018-10-23 19:02:37'
 tags:
-- europe
 - travel
-- photoblog
-image: /assets/images/2018/10/DSCF8901-1.jpg
+- europe
+- cyprus
+image: /assets/images/2018/10/DSCF5216.jpg
 ---
 
-В этому году дважды побывал на Кипре, объездил остров во всех направлениях, сделал кучу фоток и миллион заметок. Информации столько, что придётся писать на два поста. Первый — экспозиция и основные города. [Второй]( __GHOST_URL__ /kipr-2/) — тайные места и север острова.
+В этому году дважды побывал на Кипре, объездил остров во всех направлениях, сделал кучу фоток и миллион заметок. Информации столько, что придётся писать на два поста. Первый — экспозиция и основные города. [Второй](/blog/kipr-2/) — тайные места и север острова.
+
+![](/assets/images/2018/10/DSCF5216.jpg)
 
 ## Экспозиция
 
@@ -28,26 +29,15 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 Мы были на Кипре в январе и в конце августа. Как ни странно, в январе понравилось больше. Искупаться и прилечь в это время можно разве что в ванне, зато почти нет туристов, воздух пахнет спелыми апельсинами, а температура у побережья — 15–20 градусов. Зимовка на Кипре — идеальный способ сбежать от мрачной московской зимы.
 
-<div class="img-gallery>
 ![](/assets/images/2018/10/DSCF9718-3.jpg)
 ![](/assets/images/2018/10/2592524B-C2AE-448E-89E7-E970024D92CC-2.JPG)
-<div>
-
-<figcaption>Январь на Кипре</figcaption>
 
 В августе — сентябре знойно и душно — около 35 градусов. Курортные пляжи забиты так, что в море можно попасть только по скользким жопам (преимущественно русским). Зато в конце лета дозревает виноград, проходят винные фестивали и тусовки другого рода.
 
-
-
 ![](/assets/images/2018/10/DSCF5369-1.jpg)
 ![](/assets/images/2018/10/DSCF5382-1.jpg)
-
-
 ![](/assets/images/2018/10/DSCF5603.jpg)
 ![](/assets/images/2018/10/DSCF5661.jpg)
-
-
-<figcaption>Сентябрьский фестиваль вина и мототриал в Лимасоле</figcaption>
 
 Кроме курортных пляжей, остров знаменит офшорами и мягким бизнес-климатом. Есть мнение, что финансовых институций и брокерских контор здесь больше, чем продовольственных магазинов. &nbsp;Со связью, как на любом острове, всё плохо. Публичные вайфай-точки работают мучительно медленно, а мобильный интернет настолько дорогой, что даже местные им почти не пользуются.
 
@@ -55,20 +45,14 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 На острове живёт около 800 000 человек. Вторая по численности этническая группа — русские — их здесь около 5%. В городе Лимасоле их больше 10%, не считая тех, кто каждые полгода приезжает на 90 дней по турвизе, как на дачу. Вместе с дачниками, по ощущениям, русских в Лимасольске 20-30%.
 
-
 ![](/assets/images/2018/10/DSCF8813-1.jpg)
 ![](/assets/images/2018/10/IMG_7178-1.jpeg)
 
-<figcaption>Русские отмечают Новый год на Кипре</figcaption>
-
 Третья по численности этническая группа — кошки. Их здесь уважают и кормят, поэтому вся набережная на 30% состоит из кошек, а пляжный песок — из зарытых котячьих какашек. Даже форма острова напоминает силуэт кота (но это я только что выдумал).
-
 
 ![](/assets/images/2018/10/IMG_0352.jpg)
 ![](/assets/images/2018/10/IMG_7101.jpeg)
 ![](/assets/images/2018/10/DSCF8818.jpg)
-
-<figcaption>Хороший, плохой, злой</figcaption>
 
 Ценник на жильё зависит от сезона. Зимой можно снять отличные апарты в 10 метрах от пляжа за 500€ в месяц. Летом придётся напрячься, чтобы найти что-то пристойное на третьей береговой линии в пределах 1000€. Цены в ресторанах вполне европейские, в магазинах — московские. Проезд на автобусе — 1.5€. Вино — от 3€.
 
@@ -88,17 +72,10 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 Для прогулки по историческому центру достаточно часа. Потом можно отправиться через пеший чекпоинт в турецкую часть города — Лефкошу. Для этого не нужны специальные разрешения и визы. Достаточно загранпаспорта и желания.
 
-
-
 ![](/assets/images/2018/10/DSCF8774.jpg)
 ![](/assets/images/2018/10/DSCF8788.jpg)
-
-
 ![](/assets/images/2018/10/DSCF8790.jpg)
 ![](/assets/images/2018/10/DSCF8800.jpg)
-
-
-<figcaption>Север Никосии (Лефкоша) — турецкая часть города</figcaption>
 
 Контраст с южной частью — ошеломительный. На турецкой стороне вас встречают развалы с китайским ширпотребом, обветшалое недвижимое имущество, нищета и кебабошные. Здесь всё стоит в несколько раз дешевле, поэтому пообедать в северной Никосии — хорошая идея.
 
@@ -106,44 +83,26 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 А вот ехать в Никосию за отдыхом — плохая идея, да и жить там как-то суетно. Поэтому на Кипре есть второй по величине город Лимасол, который расположен на побережье и держит баланс между курортным отдыхом и урбанистическими удовольствиями.
 
-
-
 ![](/assets/images/2018/10/DSCF9824.jpg)
 ![](/assets/images/2018/10/DSCF9249.jpg)
 ![](/assets/images/2018/10/DSCF8652.jpg)
-
-
 ![](/assets/images/2018/10/DSCF8933-1.jpg)
 ![](/assets/images/2018/10/DSCF9226-1.jpg)
 ![](/assets/images/2018/10/DSCF8894-1.jpg)
-
-
 ![](/assets/images/2018/10/DSCF9721.jpg)
 ![](/assets/images/2018/10/DSCF5140.jpg)
 
-
-<figcaption>Пляжный Лимасол</figcaption>
-
 Город растянут на несколько километров вдоль побережья, поэтому кажется довольно большим. Здесь есть несколько парков, зоопарк, муниципальные пляжи категории Г, торговые центры, бутики, музеи, кинотеатры. Но самое интересное — в историческом центре.
-
-
 
 ![](/assets/images/2018/10/DSCF5718.jpg)
 ![](/assets/images/2018/10/DSCF5732.jpg)
 ![](/assets/images/2018/10/DSCF8725.jpg)
-
-
 ![](/assets/images/2018/10/DSCF8769.jpg)
 ![](/assets/images/2018/10/DSCF8860.jpg)
 ![](/assets/images/2018/10/DSCF9238.jpg)
-
-
 ![](/assets/images/2018/10/DSCF9243.jpg)
 ![](/assets/images/2018/10/DSCF9744.jpg)
 ![](/assets/images/2018/10/DSCF8853.jpg)
-
-
-<figcaption>Непляжный Лимасол</figcaption>
 
 Под самым интересным я имею в виду прогулочные набережные, марины, куски колониальной архитектуры, бары и средневековый османский форт. Больше ничего интересного нет, однако для продолжительного визита Лимасол подходит больше других городов.
 
@@ -159,30 +118,17 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 Культурного наследия в Пафосе гораздо больше, нежели в Лимасоле, поэтому город входит в список ЮНЕСКО. Гуляя по центру, то и дело наталкиваешься на какие-то древние развалины или ещё более древние пещеры. В общем, почитателям античности зайдёт.
 
-
 ![](/assets/images/2018/10/DSCF9469-1.jpg)
 ![](/assets/images/2018/10/DSCF9478.jpg)
 
-<figcaption>Бухта Афродиты и какие-то развалины</figcaption>
-
 А ещё Пафос — место рождения культа Афродиты. Неподалёку от города есть [бухта](https://goo.gl/maps/A8n7659QxQu), в которой, согласно легенде, вышла на берег богиня любви, рождённая от расплескавшегося по морю семени из отрезанного Зевсом пениса его отца Крона (не спрашивайте).
 
-
-
 ![](/assets/images/2018/10/DSCF5208.jpg)
-![](/assets/images/2018/10/DSCF5216.jpg)
 ![](/assets/images/2018/10/DSCF5221.jpg)
-
-
 ![](/assets/images/2018/10/DSCF5234.jpg)
 ![](/assets/images/2018/10/DSCF5270.jpg)
-
-
 ![](/assets/images/2018/10/DSCF5283.jpg)
 ![](/assets/images/2018/10/DSCF5342.jpg)
-
-
-<figcaption>Сёрфинг в Пафосе</figcaption>
 
 В Пафосе — лучшие закаты и самые большие волны. Поэтому вокруг города есть несколько спотов для любителей быть на гребне.
 
@@ -190,19 +136,12 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 Три факта, которые нужно знать о Ларнаке: самый большой аэропорт острова, неплохая прогулочная набережная с фортом, большое солёное озеро, куда зимой прилетают розовые фламинго (и фотографы, желающие это запечатлеть).
 
-
-
 ![](/assets/images/2018/10/DSCF5453.jpg)
 ![](/assets/images/2018/10/DSCF5456.jpg)
 ![](/assets/images/2018/10/DSCF8949.jpg)
-
-
 ![](/assets/images/2018/10/DSCF8953.jpg)
 ![](/assets/images/2018/10/DSCF8955.jpg)
 ![](/assets/images/2018/10/DSCF9033.jpg)
-
-
-<figcaption>Ларнака и окрестности (без фламинго)</figcaption>
 
 Ещё есть какая-то известная мечеть, церковь святого [Лазаря](https://ru.wikipedia.org/wiki/Церковь_Святого_Лазаря_(Ларнака)), немного архитектурных достопримечательностей, много пляжа и самая крутая на свете гиросошная — [souvlaki.gr](https://goo.gl/maps/6S61aRjuvw42), где можно плотно покушать и выпить всего на 10€.
 
@@ -214,18 +153,11 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 В пределах города есть несколько аквапарков. Самый популярный пляж — [Нисси Бич.](https://goo.gl/maps/Yi8pkjfZVuN2) Рядом — [мост влюблённых](https://goo.gl/maps/grmJUyP2ekL2) и пещера кракена.
 
-
-
 ![](/assets/images/2018/10/IMG_0355.jpg)
 ![](/assets/images/2018/10/IMG_0317.jpg)
 ![](/assets/images/2018/10/IMG_0323.jpg)
-
-
 ![](/assets/images/2018/10/DSCF5473.jpg)
 ![](/assets/images/2018/10/IMG_0353.jpg)
-
-
-<figcaption>Голубая Лагуна, мыс Греко и мост влюблённых рядом с Айия-Напой</figcaption>
 
 От суеты можно уехать на [мыс Греко](https://goo.gl/maps/HytAu11B4KN2) или в [Голубую Лагуну](https://goo.gl/maps/sLNnM7ntbpp), расположенную на восточном берегу, недалеко от какого-то стратегического объекта английских военных.
 
@@ -243,5 +175,4 @@ image: /assets/images/2018/10/DSCF8901-1.jpg
 
 ![Ета Афрдита](/assets/images/2018/10/DSCF9646-2.jpg)
 
-На этом пока всё. Читайте [второй пост]( __GHOST_URL__ /kipr-2/) о самых крутых местах, которые туристы совершенно напрасно игнорируют.
-
+На этом пока всё. Читайте [второй пост](/blog/kipr-2/) о самых крутых местах, которые туристы совершенно напрасно игнорируют.
