--- a/_posts/2018-11-07-kipr-2.markdown
+++ b/_posts/2018-11-07-kipr-2.markdown
@@ -1,18 +1,17 @@
 ---
 layout: post
-title: Дважды Кипр — горный маршрут, ущелье и турецкая часть
-featured: true
+title: Кипр — горы, ущелья и турецкая оккупация
 date: '2018-11-07 18:28:19'
 tags:
 - travel
-- photoblog
 - europe
-image: /assets/images/2018/11/DSCF5517.jpg
+- cyprus
+image: /assets/images/2018/11/DSCF8975.jpg
 ---
 
 Невероятно, но факт: на Кипре есть не только Ларнака и Айия-Напа. Всё самое интересное находится вдалеке от курортных городов. Когда устанете от пляжей и рыбных ресторанов, прочтите этот пост, арендуйте мотор и отправляйтесь в увлекательное путешествие по антикурортному маршруту.
 
-![Вид на Лефкару и горную цепь Троодос](/assets/images/2018/11/DSCF5517.jpg)
+![](/assets/images/2018/11/DSCF8975.jpg)
 
 Если всё же хотите предаваться ленивой неге, читайте [предыдущую публикацию]( __GHOST_URL__ /kipr-1/) о курортных городах и достопримечательностях.
 
@@ -26,21 +25,16 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Бронировать авто лучше на месте хотя бы за пару дней до поездки. Летом аренда стоит от 30€ в сутки, зимой можно выхватить что-то вроде Mazda Demio и за 20€. Бензин в стоимость не входит — авто нужно вернуть с полным баком. Литр 95 стоит примерно 1.3 евро.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/DSCF5150-2.jpg)
+![](/assets/images/2018/11/DSCF5150-2.jpg)
 ![](/assets/images/2018/11/DSCF5163-1.jpg)
 ![](/assets/images/2018/11/DSCF5166.jpg)
-
-<figcaption>Белые Камни на Кипре</figcaption>
 
 А ещё у вас попросят залог — сумма зависит от класса автомобиля и начинается от 1200€. Если возьмёте расширенную страховку за 5€ в сутки, сумма уменьшится до 490€. Залог холдят с кредитки и возвращают, если сдадите машину без новых царапин и вмятин.
 
 Движение на Кипре левостороннее. К счастью, дороги широкие, водители — спокойные, а КПП почти всегда автоматические. За несколько месяцев мы видели одну аварию, и та была настолько эпохальным событием, что полиция перегородила половину Ларнаки.
 
-
 ![](/assets/images/2018/11/DSCF5478-1.jpg)
 ![](/assets/images/2018/11/DSCF5476.jpg)
-
-<figcaption>Автомобильные путешествия по Кипру</figcaption>
 
 Парковки в городе платные, но штрафы настолько смешные и редкие, что всем плевать на всех — паркуются где хотят. Авто ставят поперёк обочины, поперёк пешеходной дорожки, поперёк пешехода. Скоростной режим нарушают все. Формально камеры есть, но штрафов никто никогда не получал. Полицейские на трассах — редкость.
 
@@ -49,15 +43,13 @@ image: /assets/images/2018/11/DSCF5517.jpg
 Любимый маршрут выходного дня на Кипре — дорога от побережья в горы. По пути можно офигеть от пейзажей, напиться свежего вина, увидеть отель-призрак, купить кружева, летом спастись от зноя, а зимой — покататься на лыжах. Поездка займёт один день.
 
 ![Горные дороги на Кипре](/assets/images/2018/11/DSCF8970.jpg)
+
 ### Винный регион Омодос
 
 Фасад региона — небольшая деревушка [Омодос](https://goo.gl/maps/MgjqWREuFVG2) с каким-то древним монастырём и кучей туристических лавок. Смотреть здесь нечего, зато в лавках продают главные регионообразующие товары — вино, [коммандарию](https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BC%D0%BC%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D0%B8%D1%8F) (местный портвейн), [зиванию](https://ru.wikipedia.org/wiki/%D0%97%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F) (местная граппа) и судзукос (местная чурчхела). Всё невероятно вкусное.
 
-
 ![](/assets/images/2018/11/DSCF5391.jpg)
 ![](/assets/images/2018/11/DSCF9205.jpg)
-
-<figcaption>Экспортные продукты Омодоса</figcaption>
 
 Хозяева лавок наперебой предлагают что-нибудь продегустировать. Сначала это радует, но вот ты уже пьян, накупил кучу гранатовых настоек, какой-то орех и полкило домашнего сыра [халуми](https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%BB%D0%BB%D1%83%D0%BC%D0%B8), впереди ещё целый день, еда в багажнике протухнет, вино — прольётся, а ты сам — уснёшь в дороге. Короче, будьте осторожны.
 
@@ -69,25 +61,15 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Верхняя точка горной цепи Троодос — пик [Олимбос](https://ru.wikipedia.org/wiki/%D0%9E%D0%BB%D0%B8%D0%BC%D0%B1%D0%BE%D1%81) на высоте 2 км над уровнем моря. Зимой здесь почти всегда лежит снег — можно кататься на лыжах и сноуборде. Перед поездкой стоит проверить погоду, потому что иногда на дороге образуется наледь, и колёса авто нужно обматывать цепью.
 
-
-
 ![](/assets/images/2018/11/DSCF9080.jpg)
 ![](/assets/images/2018/11/DSCF9167.jpg)
-
-
 ![](/assets/images/2018/11/IMG_0417-2.jpg)
 ![](/assets/images/2018/11/DSCF9084-1.jpg)
 
-
-<figcaption>Олимбос — самая высокая гора Кипра</figcaption>
-
 Летом снега нет, зато часто идут сильные дожди и образуется туман. Температура в горах на 15–20 градусов ниже, чем у побережья — можно немного остыть, отдохнуть от кондиционера, погулять по горным трейлам и посмотреть на природу.
-
 
 ![](/assets/images/2018/11/DSCF9513.jpg)
 ![](/assets/images/2018/11/DSCF9506.jpg)
-
-<figcaption>Температура в горах зимой — до -10 градусов</figcaption>
 
 Кстати, природа на Кипре краше зимой, когда много осадков. Засушливым летом растительность устаёт и выглядит похмельной.
 
@@ -99,11 +81,8 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Отель закрыт с 1984 года. Людей внутри много, несмотря на кучу запрещающих знаков. Фасады и интерьеры частично разрушились и встречают заблудшего путника опадающей штукатуркой и провалами в полу, поэтому находиться в отеле и правда небезопасно.
 
-
 ![](/assets/images/2018/11/DSCF9150.jpg)
 ![](/assets/images/2018/11/DSCF9176.jpg)
-
-<figcaption>Отель Беренгария — популярный спот для фотографий на Кипре</figcaption>
 
 Не знаю, чем людей так влечёт всё заброшенное и покинутое, но заехать стоит хотя бы за парой годных фотокарточек.
 
@@ -111,33 +90,20 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Высоко-высоко в горах Кипра есть несколько маленьких водопадов. Настолько маленьких, что удивить они могут разве что человека, который ни разу не мылся под душем. Но если вам очень любопытно, езжайте на [Каледонию](https://goo.gl/maps/V5Uwjz7LeoP2) — крюк отнимет всего полчаса, зато вы сразу поймёте, что следующие водопады можно объехать стороной.
 
-
 ![](/assets/images/2018/11/DSCF5397-1.jpg)
 ![](/assets/images/2018/11/DSCF5416.jpg)
 
-<figcaption>Водопады Кипра</figcaption>
-
 Ещё одна точка Кипра, занесённая в список ЮНЕСКО — горная деревня [Какопетрия](https://goo.gl/maps/v6YFDZsENd32). Она делится на две части: старую и новую. В новой, как легко догадаться, новые дома, а в старой — старые. Интерес, разумеется, представляет именно старая Какопетрия, которая расположена на холме и состоит всего из одной улицы.
-
 
 ![](/assets/images/2018/11/DSCF5408.jpg)
 ![](/assets/images/2018/11/DSCF5420.jpg)
 
-<figcaption>Улицы старой Какопетрии</figcaption>
-
 А вот горная деревня [Лефкара](https://goo.gl/maps/xui7CcYbRuy) — мекка для любителей кружева и серебряной бижутерии. Лично я таких сумасшедших не встречал, поэтому рекомендовать не стану. Однако, если будет по пути, можно заехать за неплохими видами, приятной архитектурой и уютными кафешками.
-
-
 
 ![](/assets/images/2018/11/DSCF5480.jpg)
 ![](/assets/images/2018/11/DSCF8986.jpg)
-
-
 ![](/assets/images/2018/11/DSCF9001.jpg)
-![](/assets/images/2018/11/DSCF8975.jpg)
-
-
-<figcaption>Деревня Лефкара</figcaption>
+![Вид на Лефкару и горную цепь Троодос](/assets/images/2018/11/DSCF5517.jpg)
 
 Вся горная дорога на 99% состоит из красивейших видов и крутых серпантинов. Поэтому возвращаться к побережью лучше засветло, а дальше ехать уже на следующий день.
 
@@ -145,25 +111,15 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Этот красивейший [природный заповедник](https://goo.gl/maps/KA7G8p7wC1J2) находится на западе острова. Прогулка по ущелью займёт максимум пару часов, но вместе с дорогой по пересечённой местности может растянуться на целый день. Совместите эту поездку с визитом в Пафос и [Бухту Афродиты](https://goo.gl/maps/DpYxXTSL2YN2), если ещё там не бывали.
 
-
-
 ![](/assets/images/2018/11/DSCF9312-1.jpg)
 ![](/assets/images/2018/11/DSCF9315.jpg)
-
-
 ![](/assets/images/2018/11/DSCF9350.jpg)
 ![](/assets/images/2018/11/DSCF9346.jpg)
 
-
-<figcaption>Ущелье Авакас</figcaption>
-
 Горный поток так расточил известняковую породу, что получились естественные стены высотой до 30 метров. На стенах — красивые паттерны и градиенты. Под ногами — тот самый горный поток, из-за которого в ущелье прохладно даже в жаркую погоду.
-
 
 ![](/assets/images/2018/11/DSCF9398.jpg)
 ![](/assets/images/2018/11/IMG_0413.jpg)
-
-<figcaption>Ущелье Авакас</figcaption>
 
 Летом здесь много туристов, что наверняка испортит всё удовольствие. Зимой вход закрыт жёлтой полицейской лентой из-за опасности бурного потока, но если вы любите приключения, то легко преодолеете это грозное препятствие. Мы без труда дошли до самой интересной точки ущелья, лишь слегка намочив ноги.
 
@@ -205,11 +161,9 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 [Недалеко](https://goo.gl/maps/CArHHFViLvD2) от портового города Кириния можно найти одно из самых крутых мест на Кипре и по совместительству идеальный спот для просмотра закатов — [Замок святого Илариона](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BC%D0%BE%D0%BA_%D0%A1%D0%B2%D1%8F%D1%82%D0%BE%D0%B3%D0%BE_%D0%98%D0%BB%D0%B0%D1%80%D0%B8%D0%BE%D0%BD%D0%B0), возведённый тысячу лет назад прямо на вершине горы.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/IMG_0452.jpg)
+![](/assets/images/2018/11/IMG_0452.jpg)
 ![](/assets/images/2018/11/DSCF9548.jpg)
 ![](/assets/images/2018/11/IMG_0439.jpg)
-
-<figcaption>Руины замка святого Илариона</figcaption>
 
 Замок пережил много войн, но турки его доконали. Чтобы подняться наверх, нужно запастись водой и терпением — благоустройством никто не занимался, поэтому идти придётся по скошенным каменным ступенькам, обгоняя запыхавшихся престарелых англичан.
 
@@ -217,12 +171,9 @@ image: /assets/images/2018/11/DSCF5517.jpg
 
 Чтобы перевести дух и подкрепиться, можно вернуться в [Киринию](https://ru.wikipedia.org/wiki/%D0%9A%D0%B8%D1%80%D0%B8%D0%BD%D0%B8%D1%8F). Местная бухта забита ресторанами, а цены здесь сильно ниже, чем на греческой части.
 
-
 ![](/assets/images/2018/11/DSCF9563.jpg)
 ![](/assets/images/2018/11/IMG_0351.jpg)
 
-<figcaption>Кириния</figcaption>
-
 На этом, пожалуй, тема Кипра закрыта. Не забудьте прочитать [первую часть]( __GHOST_URL__ /kipr-1/). Ждите новых заметок из старых путешествий.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2018/11/DSCF9063.jpg)
+![](/assets/images/2018/11/DSCF9063.jpg)
