--- a/_posts/2019-01-07-2k18.markdown
+++ b/_posts/2019-01-07-2k18.markdown
@@ -1,37 +1,30 @@
 ---
 layout: post
-title: 50 фотокарточек из 2k18
+title: Год цифрового кочевника
 date: '2019-01-07 19:32:33'
 tags:
-- europe
-- russia
-- travel
-- photoblog
+- photo
+- notes
+- yearly
 image: /assets/images/2019/01/DSCF9046.jpg
 ---
 
 Если коротко, прошедший год — это куча переездов, путешествий и кризисов. Пишу скорее для себя, чтобы отрефлексировать и выгрузить лишнее из оперативной памяти. Читать не обязательно.
 
+![](/assets/images/2019/01/DSCF9046.jpg)
+
 ## Трижды Кипр
 
 Год начался и закончился на Кипре. За три визита остров стал почти родным. Идеальное место, чтобы погреть кости и отдохнуть от даров цивилизации. Ближе Юго-восточной Азии, дешевле европейских курортов и гораздо теплее базовой страны.
 
-
-
-![](/assets/images/2019/01/DSCF9046.jpg)
 ![](/assets/images/2019/01/DSCF7309.jpg)
-
-
 ![](/assets/images/2019/01/DSCF5335.jpg)
 ![](/assets/images/2019/01/DSCF5221.jpg)
 
-
-<figcaption>Три визита на Кипр</figcaption>
-
 Исколесил остров во всех плоскостях и написал два поста о самых крутых местах. Прочтите, если намереваетесь с визитом:
 
-- [Зимовка на Кипре и путешествие по южной части](https://shouldgo.ru/kipr-1/)
-- [Горный маршрут, ущелье и турецкая часть Кипра](https://shouldgo.ru/kipr-2/)
+- [Зимовка на Кипре и путешествие по южной части](/blog/kipr-1/)
+- [Горный маршрут, ущелье и турецкая часть Кипра](/blog/kipr-2/)
 
 В этот раз планирую посетить немногочисленные оставшиеся достопримечательности, о которых тоже не премину написать.
 
@@ -39,32 +32,22 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Суммарно провёл в России всего 4 месяца. Окончательно понял, что не способен выжить в Москве. Съехал со съёмной квартиры и отправился искать новый дом. На память остался всего один пост и горстка фоток из столицы.
 
-- [Февраль в Москве](https://shouldgo.ru/february-in-moscow/)
+- [Февраль в Москве](/blog/february-in-moscow/)
 
 ![](/assets/images/2019/01/DSCF0102.jpg)
 ![](/assets/images/2019/01/DSCF9965.jpg)
-
-<figcaption>Москва Зимой</figcaption>
 ![](/assets/images/2019/01/DSCF4272.jpg)
 ![](/assets/images/2019/01/DSCF4698-2.jpg)
 
-<figcaption>Москва Летом</figcaption>
-
 В родном Екатеринбурге случился дважды: весной и во время чемпионата по ногомячеству. Из ЕКБ уехал ещё в 2016, но уехать ЕКБ из себя не смог. Всегда рад случаю возвратиться к любимым местам и людям, привезти с собой пару постов и годных снимков.
 
-- [Длинная тень Екатеринбурга](https://shouldgo.ru/ekb-longshadow/)
-- [Летотеринбург](https://shouldgo.ru/summer-ekb/)
-
+- [Длинная тень Екатеринбурга](/blog/ekb-longshadow/)
+- [Летотеринбург](/blog/summer-ekb/)
 
 ![](/assets/images/2019/01/DSCF0624.jpg)
 ![](/assets/images/2019/01/DSCF3606.jpg)
-
-
 ![](/assets/images/2019/01/DSCF3717.jpg)
 ![](/assets/images/2019/01/DSCF3860.jpg)
-
-
-<figcaption>Екатеринбург в любое время года</figcaption>
 
 Во время мундиаля атмосфера в городе была фантастическая. Рестобарная культура в Екате тоже неизменно радует — таких классных заведений в Москве попросту нет. В следующий раз понаеду через пару месяцев, буду рад всех увидеть.
 
@@ -72,39 +55,31 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Из Еката мы свалили в Прагу. Хотели потусоваться месяц, но в итоге задержались на три, потому что весенняя Прага — это просто бонба. Остались бы навсегда, но чехи не очень рады иммигрантам. Вернулись в декабре — за глинтвейном и клобасами.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF2620-1.jpg)
+![](/assets/images/2019/01/DSCF2620-1.jpg)
 ![](/assets/images/2019/01/DSCF2042-1.jpg)
 ![](/assets/images/2019/01/DSCF3574-1.jpg)
-
-<figcaption>Пражская весна</figcaption><figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF7164.jpg)
-
+![](/assets/images/2019/01/DSCF7164.jpg)
 ![](/assets/images/2019/01/DSCF1167.jpg)
 ![](/assets/images/2019/01/DSCF6908.jpg)
-
-
 ![](/assets/images/2019/01/DSCF7258.jpg)
 ![](/assets/images/2019/01/DSCF6914.jpg)
-
 ![Пражская зима](/assets/images/2019/01/DSCF7144.jpg)
 
 Новый пост о Праге я не написал, но есть старые из 2012 года:
 
-- [Прага — типс энд трикс](https://shouldgo.ru/prague-t/)
-- [Прага — веселые картинки](https://shouldgo.ru/prague-sights/)
-- [Прага — the end of the line](https://shouldgo.ru/praga-the-end/)
+- [Прага — типс энд трикс](/blog/prague-t/)
+- [Прага — веселые картинки](/blog/prague-sights/)
+- [Прага — the end of the line](/blog/praga-the-end/)
 
 Объехали все интересные чешские города: Крумлов, Остраву, Карловы Вары, Будеёвице, Брно, Кутну Гору, но внимания стоят только первые три. Когда-нибудь я напишу о каждом, но теперь есть только старый пост про Чески Крумлов и немного фоток.
 
-- [Чески Крумлов — мать деревень чешских](https://shouldgo.ru/cesky-krumlov/)
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2019/01/DSCF1061.jpg)
+- [Чески Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
 
+![](/assets/images/2019/01/DSCF1061.jpg)
 ![](/assets/images/2019/01/DSCF6645.jpg)
 ![](/assets/images/2019/01/DSCF0970.jpg)
-
-
 ![](/assets/images/2019/01/DSCF1480.jpg)
 ![](/assets/images/2019/01/DSCF0945.jpg)
-
 ![Разные уголки Чехии](/assets/images/2019/01/DSCF6707.jpg)
 
 Теперь переезд в Чехию — цель на ближайшие десять лет.
@@ -113,31 +88,22 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Из базового пункта в Праге добрались до Берлина, Дрездена, Мюнхена, Дахау, Нойшванштайна, Вены и Гальштата. Всего 6 стран и что-то около 30 разных городов. Это слишком.
 
-
-
 ![](/assets/images/2019/01/DSCF2908-1.jpg)
 ![](/assets/images/2019/01/DSCF3097-1.jpg)
-
-
 ![](/assets/images/2019/01/DSCF3083-1.jpg)
 ![](/assets/images/2019/01/DSCF2376-3.jpg)
-
-
 ![](/assets/images/2019/01/DSCF2520-2.jpg)
 ![](/assets/images/2019/01/DSCF2287-1.jpg)
 
-<figcaption>Фотокарточки из Европы</figcaption>
-
 Старые посты из Берлина и Дрездена:
 
-- [Дрезден со всех сторон](https://shouldgo.ru/dresden-dolls/)
-- [Приезжаем в Берлин](https://shouldgo.ru/berlin-tt/)
-- [Достопримечательный Берлин](https://shouldgo.ru/berlin-sights/)
+- [Дрезден со всех сторон](/blog/dresden-dolls/)
+- [Приезжаем в Берлин](/blog/berlin-tt/)
+- [Достопримечательный Берлин](/blog/berlin-sights/)
 
 ## Однажды Польша
 
 Ещё три месяца провели на руинах Речи Посполитой, успели посмотреть три города. Варшаву нашли неуютной, в Кракове дурная экология, поэтому на будущее выбрали Вроцлав.
-
 
 ![](/assets/images/2019/01/DSCF5863.jpg)
 ![](/assets/images/2019/01/DSCF5887.jpg)
@@ -145,15 +111,10 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Заехали в Аушвиц-Биркенау и немного охуели. Побывали в Татрах — это такие горы на границе Польши и Словакии.
 
-
 ![](/assets/images/2019/01/DSCF6265.jpg)
 ![](/assets/images/2019/01/DSCF6320.jpg)
-
-<figcaption>Татры</figcaption>
 ![](/assets/images/2019/01/DSCF6461.jpg)
 ![](/assets/images/2019/01/DSCF6486.jpg)
-
-<figcaption>Аушвиц-Биркенау</figcaption>
 
 О Польше нужно писать много и обстоятельно, поэтому пока не стану. Инициировали процесс получения ВНЖ и попривыкли к новой реальности. Теперь ждём документы, чтобы остаться надолго.
 
@@ -161,79 +122,40 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Жизнь на чемоданах не очень хорошо отражается на долгосрочных проектах — на творчество не хватает то времени, то сил. Хотел много писать в блог, но выпустил только 8 постов. Кроме уже перечисленных, можно почитать:
 
-- [2017 в фотографиях](https://shouldgo.ru/2017-in-50-photos/)
-- [Гид по Пхукету для неврастеников и декадентов](https://shouldgo.ru/post-phuket/)
-- [Грязь и неон — путешествие по Азии](https://shouldgo.ru/asia-trips/)
+- [2017 в фотографиях](/blog/2017-in-50-photos/)
+- [Гид по Пхукету для неврастеников и декадентов](/blog/post-phuket/)
+- [Грязь и неон — путешествие по Азии](/blog/asia-trips/)
 
 В котле прокрастинации маринуется примерно 20 фотопостов о разных городах и странах, до которых планирую добраться в этом году, если не найду новой причины всё просрать.
 
 С фотографией всё тоже грустно. Снимков много, но хороших — единицы. В путешествиях фоткаешь всё подряд, а надо бы фокусироваться, работать над техникой, пробовать новые жанры.
 
-
 ![](/assets/images/2019/01/DSCF0134-1.jpg)
 ![](/assets/images/2019/01/DSCF9991-1.jpg)
 
-<figcaption>Спасибо Дане Косинскому за удачные кадры</figcaption>
-
 Решил стать мамкиным видеоблогером и запилил [ютуб про фотографию](https://www.youtube.com/channel/UCGWZoVGcFE66X2d32QLAWYg?view_as=subscriber) для самых маленьких. Сделал один выпуск и пал ниц под тяжестью видеопродакшена. Возобновлять пока не планирую.
 
-<figure class="kg-card kg-embed-card"><iframe width="480" height="270" src="https://www.youtube.com/embed/ZnLQekfNdPo?start=42&amp;feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="920" height="517" src="https://www.youtube.com/embed/ZnLQekfNdPo?start=42&amp;feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Чтобы хоть как-то держать себя в тонусе, постоянно придумывал какие-то челленджи. Например, выкладываю [в свой инстаграм](http://instagram.com/shouldgo/) по одной фотке каждый день. А весной 60 дней без остановки постил всякое в свой [фейсбук](http://facebook.com/dima.afonin). Вот топовые посты.
+Чтобы хоть как-то держать себя в тонусе, постоянно придумывал какие-то челленджи. Например, выкладываю [в свой инстаграм](http://instagram.com/shouldgo/) по одной фотке каждый день. А весной 60 дней без остановки постил всякое в свой [фейсбук](http://facebook.com/dima.afonin).
 
-<figure class="kg-card kg-embed-card"><div id="fb-root">
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v3.2';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=10216302504419953&amp;set=a.10201128243752920&amp;type=3&amp;theater" data-width="552"><blockquote cite="https://www.facebook.com/photo.php?fbid=10216302504419953&amp;set=a.10201128243752920&amp;type=3" class="fb-xfbml-parse-ignore">
-<p>Многие (никто) спрашивают: «Дима, как ты так ловко перемещаешься по всей Европе? Как тебе это удаётся? И почему ты такой...</p>Gepostet von <a href="https://www.facebook.com/dima.afonin">Dima Afonin</a> am <a href="https://www.facebook.com/photo.php?fbid=10216302504419953&amp;set=a.10201128243752920&amp;type=3">Samstag, 5. Mai 2018</a>
-</blockquote><figure class="kg-card kg-embed-card"><div id="fb-root">
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v3.2';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=10216399944135885&amp;set=a.10201128243752920&amp;type=3&amp;theater" data-width="552"><blockquote cite="https://www.facebook.com/photo.php?fbid=10216399944135885&amp;set=a.10201128243752920&amp;type=3" class="fb-xfbml-parse-ignore">
-<p>В 2012 году я впервые имел отпуск за границей. Приехал в Прагу и сразу охуел. Всё казалось ненастоящим, удивительным,...</p>Gepostet von <a href="https://www.facebook.com/dima.afonin">Dima Afonin</a> am <a href="https://www.facebook.com/photo.php?fbid=10216399944135885&amp;set=a.10201128243752920&amp;type=3">Samstag, 19. Mai 2018</a>
-</blockquote><figure class="kg-card kg-embed-card"><div id="fb-root">
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v3.2';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=10217027961835935&amp;set=a.10200805510644794&amp;type=3&amp;theater" data-width="552"><blockquote cite="https://www.facebook.com/photo.php?fbid=10217027961835935&amp;set=a.10200805510644794&amp;type=3" class="fb-xfbml-parse-ignore">
-<p>Провёл в Москве неделю и родил мысль: в перспективе 20-100 лет с высокой вероятностью начнётся процесс деурбанизации....</p>Gepostet von <a href="https://www.facebook.com/dima.afonin">Dima Afonin</a> am <a href="https://www.facebook.com/photo.php?fbid=10217027961835935&amp;set=a.10200805510644794&amp;type=3">Donnerstag, 9. August 2018</a>
-</blockquote>
+### Вот топовые посты:
+- [Про автобусные путешествия по Европе](https://www.facebook.com/photo.php?fbid=10216302504419953)
+- [Про тяжёлую кочевническую жизнь](https://www.facebook.com/photo.php?fbid=10216399944135885)
+- [Про бесполезность мегаполисов](https://www.facebook.com/photo.php?fbid=10217027961835935)
 
 За год прочёл 36 книг из 30 запланированных и примерно 800 статей разной степени глупости, о чём тоже написал в Фейсбуке, чтобы срубить ведёрко лукасов.
 
-<figure class="kg-card kg-embed-card"><div id="fb-root">
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v3.2';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=10218110891468499&amp;set=a.10200805510644794&amp;type=3" data-width="552"><blockquote cite="https://www.facebook.com/photo.php?fbid=10218110891468499&amp;set=a.10200805510644794&amp;type=3" class="fb-xfbml-parse-ignore">
-<p>Традиционно подвожу итоги книжного года. В прошлый раз эпично провафлил годовой челлендж, прочитав 21 книгу из 40. В...</p>Gepostet von <a href="https://www.facebook.com/dima.afonin">Dima Afonin</a> am <a href="https://www.facebook.com/photo.php?fbid=10218110891468499&amp;set=a.10200805510644794&amp;type=3">Donnerstag, 27. Dezember 2018</a>
-</blockquote>
+- [Традиционные итоги книжного года](https://www.facebook.com/photo.php?fbid=10218110891468499)
 
 Хочу скорее обрести дом и покой, чтобы уделять больше времени фотографии и графомании. Другие цели пока ставить сложно.
 
 ## Бизнес и финансы
 
-В январе [Аутмаркетингу](http://outmarketing.ru)\* исполнится два года. Дела идут не слишком хорошо, но и не совсем погано. Среди клиентов Яндекс, Лего и одна большая соцсеть, но пока мы качали только свои скилы, а надо качать бизнес и команду.
-
+В январе [Аутмаркетингу](http://outmarketing.ru) исполнится два года. Дела идут не слишком хорошо, но и не совсем погано. Среди клиентов Яндекс, Лего и одна большая соцсеть, но пока мы качали только свои скилы, а надо качать бизнес и команду.
 
 ![](/assets/images/2019/01/_DSC0076.jpg)
 ![](/assets/images/2019/01/_DSC0109.jpg)
-
-<figcaption>Я втираю какую-то дичь</figcaption>
 
 Мы с [Антоном](https://www.facebook.com/a.shayakhov) успели поработать во всяких крутых компаниях, но к предпринимательству нас жизнь не подготовила. Наделали кучу ошибок и несколько раз были на сантиметр от закрытия. Кажется, многое поняли и теперь знаем, что делать.
 
@@ -241,19 +163,13 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Попутно стали многосерийными предпринимателями — запустили фановый сайдпроект [sameshirt\*](http://sameshirt.ru/) — пять чёрных футболок с доставкой. Получилось кайфово, но денег он практически не приносит, потому что не хватает времени.
 
-
 ![](/assets/images/2019/01/DSCF5109.jpg)
 ![](/assets/images/2019/01/DSCF5119.jpg)
 
-<figcaption>Чёрные футболки — ванлав</figcaption>
-
 В начале года занялся личными инвестициями. Скопил хорошую финансовую подушку и начал складывать по 20% дохода в акции. Сейчас рынок сильно трясёт, поэтому прибыль отрицательная, но статистика говорит, что без резких телодвижений уйти в минус на горизонте десяти лет довольно сложно.
-
 
 ![](/assets/images/2019/01/DSCF5748.jpg)
 ![](/assets/images/2019/01/Screenshot-2019-01-07-at-21.16.15.png)
-
-<figcaption>Мама, я акционер</figcaption>
 
 К концу года понял, что целеполагание даёт хотя бы какое-то ощущение контроля, поэтому серьёзно запарился за планирование. Надеюсь успеть и узнать больше, чем в прошлом году.
 
@@ -261,13 +177,9 @@ image: /assets/images/2019/01/DSCF9046.jpg
 
 Новый год встретил в горах и в отличной компании. Лучший финал сложно придумать. Посмотрю на этот пост 365 дней спустя, и удивлюсь тому, как было охуенно.
 
-
 ![](/assets/images/2019/01/DSCF7453.jpg)
 ![](/assets/images/2019/01/HbBrEaU-Q-ewRWzRm16Glw_thumb_180d.jpg)
 
-<figcaption>Новый год в кипрских горах</figcaption>
-
-Ссылку на прошлогодний пост тоже оставлю —&nbsp;специально для тех, кто любит копаться в чужой жизни: [50 фотографий из 2017](https://shouldgo.ru/2017-in-50-photos/).
+Ссылку на прошлогодний пост тоже оставлю — специально для тех, кто любит копаться в чужой жизни: [50 фотографий из 2017](/blog/2k17/).
 
 Увидимся!
-
