--- a/_posts/2010-05-01-1-of-may.markdown
+++ b/_posts/2010-05-01-1-of-may.markdown
@@ -4,14 +4,12 @@ title: Первомайский шабаш
 date: '2010-05-01 23:32:00'
 tags:
 - photo
-- russia
 - report
+- russia
 image: /assets/images/2017/10/44e9aa8b53025bca5f72cf8352af2b12.jpg
 ---
 
-В прошлый раз я попал на первомайскую демонстрацию случайно. Был дождь,&nbsp;пасмурно и охуенно. В этот раз я пошел злонамеренно, по договоренности с [Нарзотой](http://twitter.com/nowelet).
-
-Зачем то включили контровое Солнце на полную мощность,&nbsp;чем доставили изрядных проблем. Задачу немножко облегчил мой новый семипро комплект оборудования с резкой,&nbsp;как удар серпом по яицам,&nbsp;тушкой и линзой с достаточно универсальным диапазоном ФР,&nbsp;красной ленточкой и охуенной охуенностью.&nbsp;Отдельное спасибо хочется выразить особо активным представителям партий — за нескончаемые лулзы,&nbsp; и двум клюберам,&nbsp;которые мечтают вырасти «антисемистами» — за то, что принесли моду и стайл на митинг КПРФ.
+В прошлый раз я попал на первомайскую демонстрацию случайно, а в этот раз пошел злонамеренно — чтобы пустить в дело свой новый семипро комплект с красноленточной линзой. Выражаю особую благодарность активным участникам за бесконечные лулзы и идеальный косплей загнивающего совка.
 
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/7e9db0694ebd74eb844960a592fe89dd.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/3ca0ad29c6b174d42f041dc9870a238f.jpg)
