--- a/_posts/2010-05-10-9-of-may.markdown
+++ b/_posts/2010-05-10-9-of-may.markdown
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: День Победы в Екатеринбурге
+title: День Победы в Екатеринбурге
 date: '2010-05-10 12:27:00'
 tags:
-- russia
 - photo
 - report
+- russia
 image: /assets/images/2017/08/IMG_5097.jpg
 ---
 
-Фоток мало и все — говнище. Но это традиция. Буду тешиться тем,&nbsp;что даже у [Нехватита](http://twitter.com/nexvatit) с творческим фишаем получилось говно,&nbsp;пусть и чуть менее говеное:
+Фоток мало и все — говнище. Утешусь тем, что даже у [Нехватита](http://twitter.com/nexvatit) с его творческим фишаем получилось говно, пусть и чуть менее вонючее.
 
 ![IMG_4865](/assets/images/2017/08/IMG_4865.jpg)
 ![IMG_4633](/assets/images/2017/08/IMG_4633.jpg)
