--- a/_posts/2010-10-04-sosisnik.markdown
+++ b/_posts/2010-10-04-sosisnik.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Фотки с сосисника
+title: Фотки с сосисника
 date: '2010-10-04 22:31:00'
 tags:
 - photo
@@ -8,7 +8,7 @@ tags:
 image: /assets/images/2017/10/IMG_3552.jpg
 ---
 
-Хуевый фотограф внезапно обрел себя в совершенно неожиданной сфере — алкоголизме. Поэтому,&nbsp;фоточки — говно, сосисник — говнище и трололо, а пиво было хорошее, ребята тоже вообще ребята.
+Хуевый фотограф внезапно обрел себя в совершенно неожиданной сфере — алкоголизме. Поэтому, фоточки — говно, сосисник — говнище и трололо, а пиво было хорошее, ребята тоже вообще ребята.
 
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/3c701f10c162e63ad6fcc3daf5a09945.jpg)
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/IMG_3563.jpg)
