--- a/_posts/2012-04-01-photoblog-3.markdown
+++ b/_posts/2012-04-01-photoblog-3.markdown
@@ -4,40 +4,30 @@ title: Ничего не происходит
 date: '2012-04-01 19:37:00'
 tags:
 - photo
+- notes
 image: /assets/images/2017/10/360.13.9.jpg
 ---
 
-За прошедший месяц ничего толкового не написал и, что более печально, не снял. Причин тому целых три:
-- Нихуя не происходит, ну то есть совсем нихуя.
-- Пользуясь первой причиной я перепрохожу две первые части Mass Effect.
-- Ну и последняя причина находится прямо за вашим окном,.
+За прошедший месяц ничего толкового не снял. Во-первых, нихуя не происходит (пользуясь чем, я играю в Mass Effect). Во-вторых, просто выгляньте из окна.
 
 ![Последний снегопад, Дмитрий Афонин, 2012](/assets/images/2017/10/360.13.7.jpg)
 
-Тем не менее, мало и хуёво — лучше, чем совсем ничего, поэтому выкладываю, что есть.
-
-Март знаменит тем, что в нем есть восьмое число. Любят это число не все, а в основном те, у кого длинные волосы, мэйкап и колготы. Сделать этот день еще хуже может только мим.
+Март знаменит тем, что в нем есть восьмое число. Любят это число не все. Сделать этот день еще хуже обычного может только мим.
 
 ![Мартовский мим, Дмитрий Афонин, 2012](/assets/images/2017/10/IMG_1918.jpg)
 
-Эта фоточка мне нравится тем, что она менее хуевая, чем остальные. Ну а еще она уютная и цвета хорошие вышли. Больше ничего в ней нет, я вам не Картье-Брессон.
+Фотография не обязательно должна быть особенной. Иногда достаточно, чтобы она была чуть менее хуевая, чем остальные.
 
 ![Улица Радищева, Дмитрий Афонин, 2012](/assets/images/2017/10/IMG_2427.jpg)
 
-За прошедший после выборов месяц вся общественно-политическая движуха в Екб либо загнулась, либо метнулась в сторону [сноса нескольких фасадов](http://www.nr2.ru/ekb/376748.html) местного памятника архитектуры, известного как «Пассаж», вылившись в довольно импотентский митинг в защиту этой серой хуяболды.
+За прошедший после выборов месяц вся общественно-политическая движуха в Екб либо загнулась, либо метнулась в сторону [сноса нескольких фасадов](http://www.nr2.ru/ekb/376748.html) местного памятника архитектуры, известного как «Пассаж».
 
 ![Контроль, Дмитрий Афонин, 2012](/assets/images/2017/10/IMG_2560.jpg)
 
-Сам дедушка Ленин как бы говорит нам: «Да забейте вы на эту хуйню, пусть сносят до основания», но вопрос в другом. Я за то, чтобы не было серого барака, но это не оправдывает тех методов, которыми действуют застройщики. Правовой нигилизм в одной сфере общественной жизни неизбежно порождает себя самоё во всех остальных, поэтому мне немного не понятна позиция кликуш, которые удивляются, почему в стране всё так хуёво, орут, что Путин вор и ебется в жопу, но кладут хуй на бесчинства и откровенное хамство, творящееся прямо у них под носом. Так не победим.
+Сам дедушка Ленин как бы говорит нам: «Да забейте вы на эту хуйню, пусть сносят. Но правовой нигилизм в одной сфере неизбежно прорастает во все остальные.
 
 ![Митинг против сноса Пассажа, Дмитрий Афонин, 2012](/assets/images/2017/10/IMG_2567.jpg)
 
- Мне редко нравятся собственные фотки. В основном, когда я фоткаю сам себя и не глядя, как в этот раз, когда мне в руки попал форевералон-шнурочек для дистанционного спуска затвора. Осом.
+Попался под руку форевералон-шнурочек для дистанционного спуска затвора. Поэтому напоседок — самострел. 
 
 ![Дмитрий Афонин, 2012](/assets/images/2017/10/360.13.9.jpg)
-
-Не удивляйтесь ватермарку «Эльба» на некоторых снимках, эти фотки я делаю для нашего [корпоративного бложека](http://www.e-kontur.ru/blog) и социалочек.
-
-В общем, месяц вышел скучный и ничем не примечательный, но именно этим он и хорош.
-
-До скорых встреч, пока!
