--- a/_posts/2012-11-24-prague-t.markdown
+++ b/_posts/2012-11-24-prague-t.markdown
@@ -1,16 +1,15 @@
 ---
 layout: post
-title: Прага — типс энд трикс
+title: Прага — типс энд трикс
 date: '2012-11-24 00:53:00'
 tags:
 - travel
 - europe
+- czechia
 image: /assets/images/2017/09/IMG_1135.jpg
 ---
 
-Будучи пару лет подряд лишенными нормального отпуска, мы планировали махнуть в солнечную Калифорнию (записаться, наконец, на службу в госдеп), но как-то не удалось.
-
-Недолго думая, мы зааплаили на Шенгенскую визу, скачали кучу тревелинговых апплетов на айфон, взяли большой рюкзак и поехали колесить общественным транспортом по бабушке Европе, тем более, мы там ни разу не были. Первый пункт — Чехия, а точнее Прага — о ней и пойдет сегодня речь.
+Однажды я взял большой рюкзак и поехал колесить общественным транспортом по бабушке Европе. Первым пунктом была Чехия, а точнее — Прага.
 
 ![Железничи мост, Прага, 2012](/assets/images/2017/09/IMG_1268.jpg)
 
