--- a/_posts/2010-10-16-hateday.markdown
+++ b/_posts/2010-10-16-hateday.markdown
@@ -8,7 +8,7 @@ tags:
 image: /assets/images/2017/10/1cfa5284d8954f57958fb311536ca963.jpg
 ---
 
-Фотки делались для какого-то фотокросса, но до финиша ни одна не дошла. Ну и хуй с ними.
+Фотки делались для какого-то фотокросса, но до финиша ни одна не дошла.
 
 ![Find yourself a rainbow, Дмитрий Афонина, 2010](/assets/images/2017/10/1cfa5284d8954f57958fb311536ca963.jpg)
 ![Under the bridge, Дмитрий Афонин, 2010](/assets/images/2017/10/85994a44a3469bd1fed43f2c09406a6d.jpg)
