--- a/_posts/2013-09-05-adalar.markdown
+++ b/_posts/2013-09-05-adalar.markdown
@@ -1,20 +1,20 @@
 ---
 layout: post
-title: Стамбул — тур по Босфору и Принцевы острова
+title: Стамбул — тур по Босфору и Принцевы острова
 date: '2013-09-05 01:49:30'
 tags:
 - travel
 - europe
 - asia
 - turkiye
-image: /assets/images/2017/08/IMG_4351.jpg
+image: /assets/images/2017/08/IMG_4152.jpg
 ---
 
 Что делать, если жаркий стамбульский полдень норовит растопить ваше тело, а выхлопные газы и запах жаренной рыбы наполняют легкие праведным гневом?
 
-Вы можете переждать жару в гостинице, слушая шум кондиционера и пересчитывая цветы на обоях, но есть и другой выход. Идите к ближайшему причалу, отдайте все сбережения капитану безымянного судна и плывите по [Босфору](http://ru.wikipedia.org/wiki/%D0%91%D0%BE%D1%81%D1%84%D0%BE%D1%80) навстречу ветрам, а лучше купите билет до [Принцевых остров](http://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%B8%D0%BD%D1%86%D0%B5%D0%B2%D1%8B_%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B2%D0%B0) — оно того стоит.
+![Путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4152.jpg)
 
-![Принцевы острова, вид на Босфор, Стамбул 2013](/assets/images/2017/08/IMG_4351.jpg)
+Вы можете переждать жару в гостинице, слушая шум кондиционера и пересчитывая цветы на обоях, но есть и другой выход. Идите к ближайшему причалу, отдайте все сбережения капитану безымянного судна и плывите по [Босфору](http://ru.wikipedia.org/wiki/%D0%91%D0%BE%D1%81%D1%84%D0%BE%D1%80) навстречу ветрам, а лучше купите билет до [Принцевых остров](http://ru.wikipedia.org/wiki/%D0%9F%D1%80%D0%B8%D0%BD%D1%86%D0%B5%D0%B2%D1%8B_%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B2%D0%B0) — оно того стоит.
 
 ## Тур по Босфору
 
@@ -26,14 +26,14 @@ image: /assets/images/2017/08/IMG_4351.jpg
 
 Стандартный тур по Босфору за 10 лир предусматривает полуторачасавое путешествие до [моста султана Мехмеда Фатиха](http://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D1%81%D1%82_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0_%D0%9C%D0%B5%D1%85%D0%BC%D0%B5%D0%B4%D0%B0_%D0%A4%D0%B0%D1%82%D0%B8%D1%85%D0%B0) (того самого, который отпиздил Византию). Смотреть особо не на что — все те же достопримечательности можно увидеть с суши. Кораблики плавают довольно часто, поэтому аншлага нет. Все туристы толпятся на палубах, а внутри судна сидят праздные турки, спасающиеся таким образом от зноя. Есть и расширенный тур, который довезет вас аж до [Черного моря](http://ru.wikipedia.org/wiki/%D0%A7%D1%91%D1%80%D0%BD%D0%BE%D0%B5_%D0%BC%D0%BE%D1%80%D0%B5)&nbsp;(уииии, можно съебать в Украину!), но про него мы узнали в самый последний момент.
 
-![Путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4152.jpg)
+![Принцевы острова, вид на Босфор, Стамбул 2013](/assets/images/2017/08/IMG_4351.jpg)
 
 Что действительно приводит в восторг, так это потрясающего цвета вода. [Мраморное море](http://ru.wikipedia.org/wiki/%D0%9C%D1%80%D0%B0%D0%BC%D0%BE%D1%80%D0%BD%D0%BE%D0%B5_%D0%BC%D0%BE%D1%80%D0%B5) не напрасно кличут Мраморным (да, мрамор бывает бирюзовым, если это не мрамор из отечетсвенного метро).
 
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4082.jpg)
 ![Воды двух морей, путешествие по Босфору, Стамбул 2013](/assets/images/2017/08/IMG_4282.jpg)
 
-В общем, ничего сверхъестественного, но сплавать стоит. Посмотрите с воды на [Румелихисар](http://shouldgo.ru/2013/08/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула") и [Анадолухисар](http://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B0%D0%B4%D0%BE%D0%BB%D1%83%D1%85%D0%B8%D1%81%D0%B0%D1%80), отдохнете от сухопутнокрысости и насладитесь живительной прохладой.
+В общем, ничего сверхъестественного, но сплавать стоит. Посмотрите с воды на [Румелихисар](/blog/2013/08/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула") и [Анадолухисар](http://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B0%D0%B4%D0%BE%D0%BB%D1%83%D1%85%D0%B8%D1%81%D0%B0%D1%80), отдохнете от сухопутнокрысости и насладитесь живительной прохладой.
 
 ## Принцевы острова — ослепительный дом изгоев
 
@@ -69,7 +69,7 @@ image: /assets/images/2017/08/IMG_4351.jpg
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4328.jpg)
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/08/IMG_4335.jpg)
 
-Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](http://shouldgo.ru/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
+Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](/blog/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
 
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39b7.jpg)
 ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39c7.jpg)
@@ -102,12 +102,13 @@ image: /assets/images/2017/08/IMG_4351.jpg
 
 ## Прощание со Стамбулом
 
-Это последний пост про [наше июньское путешествие в Стамбул](http://shouldgo.ru/tag/istanbul/). Меньше чем за неделю я полностью поменял свое мнение о столице павших империй. Бывший Константинополь — ослепительный город, который буквально мочит тебя своим блеском и нищетой, тут красота соседствует с тленом, а принудительное гостеприимство вызывает прямо противоположные друг другу чувства. Однако, я бы приехал сюда еще не раз, отчасти из-за того, что всего увидеть и познать не получилось, отчасти от самого жестокого из всех чувств — ностальгии, которая теперь точно будет преследовать меня везде, куда бы я ни направился. Ну а Принцевы острова — это просто гаттаби плейс. Всем Адалар. До новых путешествий!
+Это последний пост про [наше июньское путешествие в Стамбул](/blog/tag/istanbul/). Меньше чем за неделю я полностью поменял свое мнение о столице павших империй. Бывший Константинополь — ослепительный город, который буквально мочит тебя своим блеском и нищетой, тут красота соседствует с тленом, а принудительное гостеприимство вызывает прямо противоположные друг другу чувства. Однако, я бы приехал сюда еще не раз, отчасти из-за того, что всего увидеть и познать не получилось, отчасти от самого жестокого из всех чувств — ностальгии, которая теперь точно будет преследовать меня везде, куда бы я ни направился. Ну а Принцевы острова — это просто гаттаби плейс. Всем Адалар. До новых путешествий!
 
 ![Мы и Босфор, Стамбул](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39ec.jpg)
 
-## Полный цикл моих веселых приключений в Стамбуле:
-- [Стамбул — турецкое гостеприимство](http://shouldgo.ru/istanbul-welcome/ "Стамбул — турецкое гостеприимство")
-- [Стамбул — южный берег Европейской части](http://shouldgo.ru/istanbul-south-european/ "Стамбул — южный берег Европейской части")
-- [Таксим-Гези, Галатская башня — Стамбул с северной стороны](http://shouldgo.ru/istanbul-taksim-galata/ "Таксим-Гези, Галатская башня — Стамбул с северной стороны")
-- [Румелихисар и небоскреб Сапфир — две крепости Стамбула](http://shouldgo.ru/rumelihisari_sapphire_istanbul/ "Румелихисар и небоскреб Сапфир — две крепости Стамбула")
+## Полный цикл веселых приключений в Стамбуле:
+- [Стамбул — турецкое гостеприимство](/blog/istanbul-welcome/)
+- [Стамбул — мечети, гетто и котики](/blog/istanbul-south-european/)
+- [Стамбул — протестные достопримечательности](/blog/istanbul-taksim-galata/)
+- [Стамбул — крепости и небоскребы](/blog/rumelihisari_sapphire_istanbul/)
+- [Стамбул — Босфор и Принцевы острова](/blog/adalar/)
